# api/controller.py
@@ -1,5 +1,6 @@
 import sys
 
+import pandas as pd
 import pymysql
 from config import (
     DB_HOST,
@@ -12,6 +13,7 @@ from config import (
 )
 from dbutils.pooled_db import PooledDB
 from flask import abort, request
+from model_manager import ModelBuilder, ModelManager
 from prediction import PredictMoisture
 
 sys.path.append(OPENAPI_STUB_DIR)
@@ -66,7 +68,6 @@ def aggregate_sensor_data():
             models.SensorData(read_time, light, temperature, soil_moisture)
             for read_time, light, temperature, soil_moisture in cs.fetchall()
         ]
-        print(result)
     return result
 
 
@@ -109,9 +110,63 @@ def aggregate_weather_data():
 
 
 def moisture_prediction(moisture):
-    predictions = [
-        models.SoilMoisture(row["ts"], row["soil_moisture"])
-        for _, row in PredictMoisture().update_df(None).get_predictions().iterrows()
+    if not ModelManager.get_model():
+        df = get_moisture_df()
+        builder = ModelBuilder()
+        builder.add_basic_init(df, "soil_moisture", (2, 0, 1), pd.Timedelta(minutes=15))
+
+        builder.add_exog("temperature", (2, 0, 1), (1, 0, 1, 24)).add_exog(
+            "humidity", (2, 0, 1), (1, 0, 1, 24)
+        ).build()
+
+    prediction, upper, lower = ModelManager.get_model().fit_model().get_prediction(1240)
+    old_data = [
+        models.SoilMoisture(index, row["soil_moisture"])
+        for index, row in ModelManager.get_model().df.iterrows()
     ]
-    duration = PredictMoisture().predict_duration(moisture)
-    return models.PredictMoisture(duration, predictions)
+    pred_transformed = [
+        models.SoilMoisture(ts, value) for ts, value in prediction.items()
+    ]
+    upper_transformed = [
+        models.SoilMoisture(ts, value) for ts, value in upper.items()
+    ]
+    lower_transformed = [
+        models.SoilMoisture(ts, value) for ts, value in lower.items()
+    ]
+
+    duration = ModelManager.get_model().get_duration(moisture)
+    return models.PredictMoisture(duration, old_data, pred_transformed, upper_transformed, lower_transformed)
+
+
+def get_moisture_df():
+    with pool.connection() as conn, conn.cursor() as cs:
+        cs.execute(f"""WITH tempTable AS (
+                SELECT
+                    DATE_ADD(DATE(`ts`), INTERVAL FLOOR(TIME_TO_SEC(TIME(`ts`)) / (15 * 60)) * 15 * 60 SECOND) AS `ts`,
+                    AVG(`light`) AS `avg_light`,
+                    AVG(`temperature`) AS `avg_temperature`,
+                    AVG(`soil_moisture`) AS `avg_soil_moisture`
+                FROM `{PLANT_SENSOR_TABLE}`
+                GROUP BY DATE_ADD(DATE(`ts`), INTERVAL FLOOR(TIME_TO_SEC(TIME(`ts`)) / (15 * 60)) * 15 * 60 SECOND)
+            )
+
+            SELECT 
+                t.ts,
+                t.avg_light AS light,
+                t.avg_temperature AS temperature,
+                t.avg_soil_moisture AS soil_moisture,
+                w.humidity AS humidity,
+                w.temperature AS api_temp,
+                w.precipitation,
+                w.cloud_cover
+            FROM tempTable t
+            INNER JOIN `{WEATHER_TABLE}` w ON t.ts = w.ts;
+        """)
+        columns = [col[0] for col in cs.description]
+
+        data = cs.fetchall()
+
+    df = pd.DataFrame(data, columns=columns)
+    df["ts"] = pd.to_datetime(df["ts"])  # parse as datetime
+    df.set_index("ts", inplace=True)
+    return df
